2006-11-08  Yves Combe  <yves@ycombe.net>

	2.6/Win98 fix:
	- tuxpaint launcher: fix bug related to pygtk/gtk 2.6 (for win98)
	- suppress g_error if no boards in gc_board_pause.
	- add error message with db name
	- use G_WIN32_IS_NT_BASED, as g_get_home_dir return c:\ instead of NULL in 2.6/Win98
	- reuse time instead of g_timeval for 2.6
	
	* configure.in:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board.c: (gc_board_pause):
	* src/gcompris/gcompris.c: (load_properties):
	* src/gcompris/gcompris_db.c: (gc_db_init):
	* src/gcompris/menu.c: (gc_menu_load):
	* src/gcompris/properties.c: (gc_prop_user_root_directory_get),
	(gc_prop_config_file_get):

2006-10-27  Yves Combe  <yves@ycombe.net>

	pass -DSTATIC_MODULE for native mingw compilation.
	It should make windows version as before. Need test.

	* src/gcompris/Makefile.mingw:

2006-10-26  Yves Combe  <yves@ycombe.net>

	fix compilation and problems on linux.

	* po/Makefile.in.in:
	* src/boards/Makefile.am:
	* src/boards/gtans_support.c:
	* src/boards/python/tuxpaint.py:

2006-10-26  Yves Combe  <yves@ycombe.net>

	Make tuxpaint launcher works on Windows. Uses tuxpaint installation registry key.

	* src/boards/python/tuxpaint.py:

2006-10-25  Yves Combe  <yves@ycombe.net>

	Reapply patch suppressed from HEAD branch, for cross compile with mingw.

	* Makefile.am:
	* Makefile.mingw.in:
	* acinclude.m4:
	* configure.in:
	* cross-configure.sh:
	* gcompris-installer.nsi.in:
	* po/ChangeLog:
	* po/fi.po:
	* src/boards/Makefile.am:
	* src/boards/advanced_colors.c: (colors_next_level),
	(colors_create_item):
	* src/boards/algebra.c: (get_operand), (get_random_number):
	* src/boards/algebra_guesscount.c: (generate_numbers):
	* src/boards/awele.c: (initBoardGraphics), (updateNbBeans):
	* src/boards/awele_alphaBeta.c: (firstChild):
	* src/boards/awele_utils.c: (randplay):
	* src/boards/click_on_letter.c: (click_on_letter_create_item):
	* src/boards/clickgame.c: (clickgame_create_item),
	(load_random_pixmap):